add_package()

py_library(
  NAME
    rewrite
  DEPS
    .abstract
    .analyze
    .frame
    .vm
)

py_library(
  NAME
    abstract
  SRCS
    abstract.py
  DEPS
    pytype.blocks.blocks
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    abstract_test
  SRCS
    abstract_test.py
  DEPS
    .abstract
    pytype.rewrite.flow.flow
)

py_library(
  NAME
    analyze
  SRCS
    analyze.py
  DEPS
    .vm
    pytype.config
    pytype.errors
    pytype.load_pytd
    pytype.pytd.pytd
)

py_test(
  NAME
    analyze_test
  SRCS
    analyze_test.py
  DEPS
    .analyze
    pytype.config
    pytype.load_pytd
    pytype.pytd.pytd
)

py_library(
  NAME
    convert
  SRCS
    convert.py
  DEPS
    .abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    convert_test
  SRCS
    convert_test.py
  DEPS
    .convert
)

py_library(
  NAME
    frame
  SRCS
    frame.py
  DEPS
    .abstract
    .stack
    pytype.blocks.blocks
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    frame_test
  SRCS
    frame_test.py
  DEPS
    .abstract
    .convert
    .frame
    pytype.blocks.blocks
    pytype.pyc.pyc
    pytype.rewrite.tests.test_utils
)

py_library(
  NAME
    stack
  SRCS
    stack.py
  DEPS
    .abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    stack_test
  SRCS
    stack_test.py
  DEPS
    .abstract
    .stack
)

py_library(
  NAME
    vm
  SRCS
    vm.py
  DEPS
    .abstract
    .convert
    .frame
    pytype.config
    pytype.blocks.blocks
    pytype.pyc.pyc
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    vm_test
  SRCS
    vm_test.py
  DEPS
    .abstract
    .vm
    pytype.config
    pytype.pyc.pyc
    pytype.rewrite.tests.test_utils
)

add_subdirectory(flow)
add_subdirectory(tests)
