add_package()

py_library(
  NAME
    rewrite
  DEPS
    .analyze
    .frame
    .vm
)

py_library(
  NAME
    analyze
  SRCS
    analyze.py
  DEPS
    .vm
    pytype.config
    pytype.errors
    pytype.load_pytd
    pytype.pytd.pytd
)

py_test(
  NAME
    analyze_test
  SRCS
    analyze_test.py
  DEPS
    .analyze
    pytype.config
    pytype.load_pytd
    pytype.pytd.pytd
)

py_library(
  NAME
    convert
  SRCS
    convert.py
  DEPS
    pytype.rewrite.abstract.abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    convert_test
  SRCS
    convert_test.py
  DEPS
    .convert
)

py_library(
  NAME
    frame
  SRCS
    frame.py
  DEPS
    .stack
    pytype.blocks.blocks
    pytype.rewrite.abstract.abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    frame_test
  SRCS
    frame_test.py
  DEPS
    .convert
    .frame
    pytype.blocks.blocks
    pytype.pyc.pyc
    pytype.rewrite.abstract.abstract
    pytype.rewrite.tests.test_utils
)

py_library(
  NAME
    stack
  SRCS
    stack.py
  DEPS
    pytype.rewrite.abstract.abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    stack_test
  SRCS
    stack_test.py
  DEPS
    .stack
    pytype.rewrite.abstract.abstract
)

py_library(
  NAME
    vm
  SRCS
    vm.py
  DEPS
    .convert
    .frame
    pytype.config
    pytype.blocks.blocks
    pytype.pyc.pyc
    pytype.rewrite.abstract.abstract
    pytype.rewrite.flow.flow
)

py_test(
  NAME
    vm_test
  SRCS
    vm_test.py
  DEPS
    .vm
    pytype.config
    pytype.pyc.pyc
    pytype.rewrite.abstract.abstract
    pytype.rewrite.tests.test_utils
)

add_subdirectory(abstract)
add_subdirectory(flow)
add_subdirectory(tests)
